# pieces

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: crdt.hpp  format.hpp  gb+tree.hpp  piecetree.hpp  taggedptr.hpp  text.hpp
test/: main.cpp  simpletext.hpp
